Fix card width on mobile devices to add space between card and screen edges

--- a/exercise.html
+++ b/exercise.html
@@ -228,6 +228,12 @@
                 width: 100%;
                 max-width: 250px;
             }
+            
+            .card.flipped {
+                width: 90%;
+                max-width: 300px;
+                margin: 0 auto;
+            }
         }
     </style>
 </head>
