Fix card width on mobile and improve text fitting in grid cards

--- a/exercise.html
+++ b/exercise.html
@@ -57,6 +57,11 @@
             text-align: center;
             padding: 10px;
             font-size: 0.9rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            word-break: break-word;
+            overflow: hidden;
         }
         
         .card-back {
