Fix card width on mobile and improve text fitting in grid cards

--- a/exercise.html
+++ b/exercise.html
@@ -57,6 +57,8 @@
             text-align: center;
             padding: 10px;
             font-size: 0.9rem;
+            word-break: break-word;
+            overflow: hidden;
         }
         
         .card-back {
@@ -227,6 +229,12 @@
             .btn {
                 width: 100%;
                 max-width: 250px;
+            }
+            
+            .card.flipped {
+                width: 90%;
+                max-width: 300px;
+                margin: 0 auto;
             }
         }
     </style>
