--- a/exercise.html
+++ b/exercise.html
@@ -251,9 +251,7 @@
                 position: fixed;
                 top: 50%;
                 left: 20px;
-                right: 20px;
-                width: auto;
-                max-width: none;
+                width: calc(100% - 40px); /* Ensures a 20px gap on each side */
                 transform: translateY(-50%);
                 margin: 0;
             }
@@ -270,9 +268,7 @@
                 position: fixed;
                 top: 50%;
                 left: 20px;
-                right: 20px;
-                width: auto;
-                max-width: none;
+                width: calc(100% - 40px); /* Ensures a 20px gap on each side */
                 transform: translateY(-50%);
                 margin: 0;
             }
