Set flipped card width to 300px on mobile devices

--- a/exercise.html
+++ b/exercise.html
@@ -251,8 +251,8 @@
                 position: fixed;
                 top: 50%;
                 left: 50%;
-                width: 90vw; /* 90% of viewport width */
-                max-width: 280px;
+                width: 300px; /* Fixed width of 300px */
+                max-width: 90vw; /* But never more than 90% of viewport width */
                 transform: translate(-50%, -50%);
                 margin: 0;
             }
