Add Stage 2 page showing only saved values

--- a/exercise.html
+++ b/exercise.html
@@ -319,6 +319,7 @@
         <div class="buttons-container">
             <button id="purpose-btn" class="btn secondary-btn">Purpose</button>
             <button id="reset-btn" class="btn secondary-btn">Reset Values</button>
+            <button id="stage2-btn" class="btn secondary-btn">To Stage 2</button>
             <button id="values-btn" class="btn primary-btn">Your Values</button>
         </div>
     </div>
