Update Stage 2 page to show original category colors, gray for discarded cards, and add discard counter

--- a/exercise2.html
+++ b/exercise2.html
@@ -310,7 +310,7 @@
     <div class="container exercise-page">
         <h1>Your Inner Compass</h1>
         <h2>Stage 2: Review Your Selected Values</h2>
-        <p class="exercise-instructions">These are the values you've selected. You can still make changes by keeping or discarding values.</p>
+        <p class="exercise-instructions">Now lets reduce the number of your core values to the most important 5 values.</p>
         
         <div id="cards-container" class="cards-container">
             <!-- Cards will be dynamically generated here -->
