--- a/exercise2.html
+++ b/exercise2.html
@@ -69,8 +69,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            word-break: break-word; /* Allow words to break if needed */
-            hyphens: auto; /* Add hyphens for better word breaking */
+            word-break: normal; /* Don't break words */
+            white-space: normal; /* Allow text to wrap to next line */
         }
         
         .card-back {
