Implement new exercise flow with intro popup, discard counter, and auto-transfer to stage 2

--- a/exercise2.html
+++ b/exercise2.html
@@ -314,6 +314,8 @@
         <h2>Stage 2: Review Your Selected Values</h2>
         <p class="exercise-instructions">Now lets reduce the number of your core values to the most important 5 values.</p>
         
+        <div id="discard-counter" class="discard-counter">Need to discard 0 values</div>
+        
         <div id="cards-container" class="cards-container">
             <!-- Cards will be dynamically generated here -->
         </div>
