Remove pointer-events: none to allow flipping discarded cards

--- a/exercise.html
+++ b/exercise.html
@@ -106,8 +106,7 @@
         
         /* Discarded Card Styles */
         .card.discarded {
-            pointer-events: none !important; /* Prevent interaction with discarded cards */
-            cursor: not-allowed !important;
+            cursor: pointer !important; /* Allow interaction with discarded cards */
         }
         
         .card.discarded .card-front {
