--- a/exercise2.html
+++ b/exercise2.html
@@ -55,8 +55,7 @@
         
         /* Discarded Card Styles */
         .card.discarded {
-            pointer-events: none !important; /* Prevent interaction with discarded cards */
-            cursor: not-allowed !important;
+            cursor: pointer !important; /* Allow interaction with discarded cards */
         }
         
         .card.discarded .card-front {
