--- a/exercise2.html
+++ b/exercise2.html
@@ -105,7 +105,9 @@
             display: grid;
             grid-template-columns: repeat(10, 1fr);
             gap: 10px;
-            margin: 2rem 0;
+            margin: 2rem auto;
+            max-width: 90%;
+            justify-content: center;
         }
         
         .card {
