--- a/exercise.html
+++ b/exercise.html
@@ -155,10 +155,11 @@
         .cards-container {
             display: grid;
             grid-template-columns: repeat(10, 1fr);
-            gap: 10px;
+            gap: 15px;
             margin: 2rem auto;
-            max-width: 90%;
+            max-width: 85%;
             justify-content: center;
+            padding: 0 20px;
         }
         
         .card {
