--- a/exercise2.html
+++ b/exercise2.html
@@ -106,9 +106,9 @@
             grid-template-columns: repeat(10, 1fr);
             gap: 15px;
             margin: 2rem auto;
-            max-width: 85%;
+            max-width: 80%;
             justify-content: center;
-            padding: 0 20px;
+            padding: 2rem;
         }
         
         .card {
