--- a/exercise.html
+++ b/exercise.html
@@ -154,12 +154,15 @@
         
         .cards-container {
             display: grid;
-            grid-template-columns: repeat(10, 1fr);
+            grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
             gap: 15px;
             margin: 2rem auto;
-            max-width: 80%;
+            width: 90%;
+            max-width: 1200px;
             justify-content: center;
-            padding: 2rem;
+            padding: 1rem;
+            box-sizing: border-box;
+            overflow: hidden;
         }
         
         .card {
