Revert grid layout to fixed columns to fix mobile layout issues

--- a/exercise2.html
+++ b/exercise2.html
@@ -101,18 +101,14 @@
             font-size: 0.9rem;
         }
         
-        .cards-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-            gap: 15px;
-            margin: 2rem auto;
-            width: 90%;
-            max-width: 1200px;
-            justify-content: center;
-            padding: 1rem;
-            box-sizing: border-box;
-            overflow: hidden;
-        }
+    .cards-container {
+      display: grid;
+      grid-template-columns: repeat(10, 1fr);
+      gap: 10px;
+      margin: 2rem auto;
+      max-width: 90%;
+      justify-content: center;
+    }
         
         .card {
             position: relative;
